buildSrc/src/test/resources/test-projects/invalid-demo/settings.gradle.kts
rootProject.name = "demo-plugin-invalid"

include(":demos:invalid")
include(":demos:duplicate_one")
include(":demos:duplicate_two")
include(":engine")
include(":demos:shared-assets")
